update api doc
