# docs/UI/apidocs.json
@@ -410,67 +410,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "receiver_address": {
-                    "type": "string",
-                    "description": "loan reciever wallet address",
-                    "example": "hgs568i2yyrr6yfa8s7dfavysdtf86"
-                  },
-                  "receiver_staked_points": {
-                    "type": "number",
-                    "description": "loan reciever points staked again the loan",
-                    "example": "25"
-                  },
-                  "loan_amount": {
-                    "type": "number",
-                    "description": "loan amount",
-                    "example": "25"
-                  },
-                  "interest_rate": {
-                    "type": "number",
-                    "description": "Percentage Loan interest rate must be between 0 and 100",
-                    "example": "3"
-                  },
-                  "agent_address": {
-                    "type": "string",
-                    "description": "agent_address",
-                    "example": "hgs568i2yyrr6yfa8s7dfavysdtf86"
-                  },
-                  "start_date": {
-                    "type": "Date",
-                    "description": "Valid DateTime object, when the loan starts"
-                  },
-                  "end_date": {
-                    "type": "Date",
-                    "description": "Valid DateTime object, when the loan ends"
-                  },
-                  "backers": {
-                    "type": "object",
-                    "description": "List of backer address and respective staked backer points",
-                    "properties": {
-                      "address": {
-                        "type": "string",
-                        "description": "backer wallet address",
-                        "example": "hgs568i2yyrr6yfa8s7dfavysdtf86"
-                      },
-                      "points": {
-                        "type": "number",
-                        "description": "backer staked points",
-                        "example": "25"
-                      }
-                    }
-                  }
-                },
-                "required": [
-                  "receiver_address",
-                  "receiver_staked_points",
-                  "loan_amount",
-                  "agent_address",
-                  "start_date",
-                  "end_date",
-                  "backers"
-                ]
+                "$ref": "#/components/schemas/contract-creation-object"
               }
             }
           }
@@ -985,6 +925,54 @@
             "format": "String",
             "description": "Backer wallet address",
             "example": "mnabdivy90qonausfyfdt6a"
+          }
+        }
+      },
+      "contract-creation-object": {
+        "type": "object",
+        "properties": {
+          "receiver_address": {
+            "type": "string",
+            "description": "loan reciever wallet address",
+            "example": "hgs568i2yyrr6yfa8s7dfavysdtf86"
+          },
+          "receiver_staked_points": {
+            "type": "number",
+            "description": "loan reciever points staked again the loan",
+            "example": "25"
+          },
+          "loan_amount": {
+            "type": "number",
+            "description": "loan amount",
+            "example": "25"
+          },
+          "interest_rate": {
+            "type": "number",
+            "description": "Percentage Loan interest rate must be between 0 and 100",
+            "example": "3"
+          },
+          "agent_address": {
+            "type": "string",
+            "description": "agent_address",
+            "example": "hgs568i2yyrr6yfa8s7dfavysdtf86"
+          },
+          "start_date": {
+            "type": "Date",
+            "description": "Valid DateTime object, when the loan starts",
+            "example": "11/11/2021"
+          },
+          "end_date": {
+            "type": "Date",
+            "description": "Valid DateTime object, when the loan ends",
+            "example": "11/11/2022"
+          },
+          "backers": {
+            "type": "array",
+            "format": "-",
+            "description": "List of backers and backed points",
+            "items": {
+              "$ref": "#/components/schemas/backer-object"
+            }
           }
         }
       }
